--- a/02_activities/assignments/assignment_1.ipynb
+++ b/02_activities/assignments/assignment_1.ipynb
@@ -26,10 +26,10 @@
     "    * Open a private window in your browser. Copy and paste the link to your pull request into the address bar. Make sure you can see your pull request properly. This helps the technical facilitator and learning support staff review your submission easily.\n",
     "\n",
     "Checklist:\n",
-    "- [ ] Created a branch with the correct naming convention.\n",
-    "- [ ] Ensured that the repository is public.\n",
-    "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
-    "- [ ] Verify that the link is accessible in a private browser window.\n",
+    "- [x] Created a branch with the correct naming convention.\n",
+    "- [x] Ensured that the repository is public.\n",
+    "- [x] Reviewed the PR description guidelines and adhered to them.\n",
+    "- [x] Verify that the link is accessible in a private browser window.\n",
     "\n",
     "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#dc-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
    ]
@@ -56,32 +56,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# For testing purposes, we will write our code in the function\n",
-    "def anagram_checker(word_a, word_b):\n",
-    "  # Your code here\n",
+    "from collections import defaultdict\n",
     "\n",
-    "# Run your code to check using the words below:\n",
+    "def anagram_checker(word_a, word_b):\n",
+    "  if len(word_a) != len(word_b):\n",
+    "    return False\n",
+    "  freq_a = defaultdict(int)\n",
+    "  freq_b = defaultdict(int)\n",
+    "  for ch_a, ch_b in zip(word_a, word_b):\n",
+    "    freq_a[ch_a.lower()] += 1\n",
+    "    freq_b[ch_b.lower()] += 1\n",
+    "  return freq_a.items() == freq_b.items()\n",
+    "\n",
     "anagram_checker(\"Silent\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Night\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -97,12 +137,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "  # Modify your existing code here\n",
+    "  if len(word_a) != len(word_b):\n",
+    "    return False\n",
+    "  freq_a = defaultdict(int)\n",
+    "  freq_b = defaultdict(int)\n",
+    "  for ch_a, ch_b in zip(word_a, word_b):\n",
+    "    ch_a = ch_a if is_case_sensitive else ch_a.lower()\n",
+    "    ch_b = ch_b if is_case_sensitive else ch_b.lower()\n",
+    "    freq_a[ch_a] += 1\n",
+    "    freq_b[ch_b] += 1\n",
+    "  return freq_a.items() == freq_b.items()\n",
     "\n",
     "# Run your code to check using the words below:\n",
     "anagram_checker(\"Silent\", \"listen\", False) # True"
@@ -110,9 +170,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "anagram_checker(\"Silent\", \"Listen\", True) # False"
    ]
@@ -130,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new-learner",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -144,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
