apply axis on summary_values

--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "metadata": {
     "id": "n0m48JsS-nMC"
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {
     "id": "82-bk4CBB1w4"
    },
@@ -279,13 +279,13 @@
     "    if operation not in func_map:\n",
     "        raise ValueError(\"Invalid operation. Please choose 'mean', 'max', or 'min'.\")      \n",
     "    current_function = func_map[operation]\n",
-    "    summary_values = np.array([current_function(patient) for patient in data])\n",
+    "    summary_values = current_function(data, axis=1)\n",
     "    return summary_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {
     "id": "3TYo0-1SDLrd"
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {
     "id": "_svDiRkdIwiT"
    },
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "metadata": {
     "id": "LEYPM5v4JT0i"
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
