--- a/02_activities/assignments/assignment_2.ipynb
+++ b/02_activities/assignments/assignment_2.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {
     "id": "n0m48JsS-nMC"
    },
@@ -205,8 +205,9 @@
     }
    ],
    "source": [
+    "from os import path\n",
     "all_paths = [\n",
-    "  \"../../../python/05_src/data/assignment_2_data/inflammation_01.csv\",\n",
+    "  \"python/05_src/data/assignment_2_data/inflammation_01.csv\",\n",
     "  \"python/05_src/data/assignment_2_data/inflammation_02.csv\",\n",
     "  \"python/05_src/data/assignment_2_data/inflammation_03.csv\",\n",
     "  \"python/05_src/data/assignment_2_data/inflammation_04.csv\",\n",
@@ -219,11 +220,9 @@
     "  \"python/05_src/data/assignment_2_data/inflammation_11.csv\",\n",
     "  \"python/05_src/data/assignment_2_data/inflammation_12.csv\"\n",
     "]\n",
-    "\n",
+    "all_paths = [path.join('../../../', p) for p in all_paths]\n",
     "with open(all_paths[0], 'r') as f:\n",
-    "    # YOUR CODE HERE: Use the readline() or readlines() method to read the .csv file into a variable\n",
     "    lines = f.readlines()\n",
-    "    # YOUR CODE HERE: Iterate through the variable using a for loop and print each row for inspection\n",
     "    for line in lines:\n",
     "        print(line)"
    ]
@@ -259,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "metadata": {
     "id": "82-bk4CBB1w4"
    },
@@ -285,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {
     "id": "3TYo0-1SDLrd"
    },
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {
     "id": "_svDiRkdIwiT"
    },
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {
     "id": "LEYPM5v4JT0i"
    },
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
